done: project completed (#100)
* fix: fix css error for signup's inputs

* update player crud (#5)

* feat (BE): Field management (#6)

* Trung (#7)

* update player crud

* feat team create

* feat crud team continue (#8)

* update (FE): fix navbar ui (#9)

* feat (FE): Home Page

* feat (BE): Notification management (#10)

* feat (BE): config Cloudinary, FileController (#11)

* feat (BE): Booking (createBooking). Async config, Schedule config

* update (BE): fix Booking Scheduler -> auto check every 1min (#12)

* feat (BE): complete Booking management (#13)

* Trung (#14)

* feat crud team continue

* feat (BE) complete Tounament management

* *update (BE): change Booking's logic - done (#15)

* feat (BE + FE): Field Booking - done (#16)

* update: FE: fix Toast config error, fix redirect pages. BE: update createBooking use currentUser (#17)

* feat (FE): dynamic Navbar & SportHome, Sports Page

* feat (BE): update profile (#18)

* feat (FE): update profile -> done (#19)

* update-fe: create admin view (#20)

Co-authored-by: huynhtri123 <126040259+huynhtri123@users.noreply.github.com>

* fix: axios request

* upfate (BE): Team (#21)

* refactor: comment out Tournament logic for upcoming improvements

* feat (BE): Tournament (#22)

* feat (FE), update (BE): Tournament for Customer - done (#23)

* update (BE+FE): Profile - show myBookings, myRegisteredTournaments (#24)

* update (BE): fix security config - accept Guess (#26)

* update: BE: fix access for Guess, FE: manage myTeams (#27)

* update (BE): fix security config - accept Guess

* update: BE: fix access for Guess, FE: manage myTeams

* feat: create course be and view (#25)

Co-authored-by: huynhtri123 <126040259+huynhtri123@users.noreply.github.com>

* resolve conflict

* update (FE): update Tournament (home & register) UI (#28)

* fix: Booking - booking time mistake

* feat: CancelFieldBooking, Signout (FE), refactor App.js (#29)

* feat (FE): role-based navigation, refactor Signout component (#30)

*